--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.330.0",
     "next": "^14.1.4",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "webpack": "^5.0.0",
