--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "webpack": "^5.0.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.28.6",
